--- a/index.html
+++ b/index.html
@@ -1,9 +1,12 @@
 <!doctype html>
-<html lang="en">
+<html lang="en" class="dark bg-white dark:bg-zinc-800 text-black dark:text-gray-400">
 <head>
 	<meta charset="UTF-8"/>
 	<link rel="icon" type="image/svg+xml" href="/vite.svg"/>
 	<meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+	<link rel="preconnect" href="https://fonts.googleapis.com">
+	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+	<link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
 	<script src="https://kit.fontawesome.com/9031871610.js" crossorigin="anonymous"></script>
 	<title>Home</title>
 </head>
